@startuml

title __WISHLIST's Class Diagram__\n

  namespace com.labproject.keepmoneyv3 {
    namespace ui.wishlist {
      class com.labproject.keepmoneyv3.ui.wishlist.WishListsFragment {
          + onAttach()
          + onCreateView()
          - buildGridView()
          - buildWishListOptionsDialog()
          - gridViewItemAction()
      }
    }
  }
  

  namespace com.labproject.keepmoneyv3 {
    namespace ui.wishlist {
      interface com.labproject.keepmoneyv3.ui.wishlist.WishListsFragment.WishListsFragmentListener {
          {abstract} + confirmWishList()
          {abstract} + onWishListsFragmentOpened()
      }
    }
  }
  

  com.labproject.keepmoneyv3.ui.wishlist.WishListsFragment -up-|> androidx.fragment.app.Fragment
  com.labproject.keepmoneyv3.ui.wishlist.WishListsFragment o-- com.labproject.keepmoneyv3.ui.wishlist.WishListsFragment.WishListsFragmentListener : listener
  com.labproject.keepmoneyv3.ui.wishlist.WishListsFragment +-down- com.labproject.keepmoneyv3.ui.wishlist.WishListsFragment.WishListsFragmentListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
